# nais_blue

./: .gitignore  AGENTS.md  DESIGN.md  MOBILE_SYNC_STATUS.md  README.ja.md  README.ko.md  README.md  RELEASING.md  android-release-policy.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.toml
.github/: dependabot.yml
.github/workflows/: android.yml  build.yml
docs/: persistence-map.md
docs/composition-v2/: AGENT_JSON_EDITING_GUIDE.md  ARCHITECTURE.md  BACKUP_RESTORE_GUIDE.md  CURRENT_WORKFLOW_BEHAVIOR.md  DECISIONS.md  DELETION_CANDIDATES.md  DEVELOPER_VERIFICATION.md  IMPLEMENTATION_LEDGER.md  KNOWN_LIMITATIONS.md  LEGACY_RETIREMENT_GATE.md  LEGACY_RUNTIME_ALLOWLIST.md  MAIN_V2_CUTOVER.md  MARKETPLACE_REMOVAL.md  MIGRATION_GUIDE.md  NETWORK_CAPABILITY_POLICY.md  PAYLOAD_PARITY_GAPS.md  RISK_REGISTER.md  ROLLBACK_POLICY.md  SCENE_V2_CUTOVER.md  STATUS.md  VERIFICATION_BASELINE.md
legacy/: README.md
legacy/NAIS2-2.0.29/: package-lock.json  package-lock.snapshot.json  package.json
legacy/NAIS2-main-source-snapshot/: .gitignore  package-lock.json  package.json  package.snapshot.json  vite.config.ts
scripts/: android-update-baseline.mjs  build-android-signed-local.ps1  create-public-release.ps1  patch-android-signing.mjs  prepare-android-release.mjs  qa-cloudflare-transfer-live.mjs  release-android.ps1  rotate-cloudflare-pairing-and-qa.mjs  smoke-nai-endpoints.mjs  smoke-nai-subscription.mjs  track-android-idle.ps1  verify-android-apk.mjs  verify-android-port-contract.mjs  verify-android-release-contract.mjs  verify-auto-backup-phase.mjs  verify-character-rotation-phase.mjs  verify-dual-api-phase.mjs  verify-dual-worker-phase.mjs  verify-nai-core-phase.mjs  verify-output-directories-phase.mjs  verify-prompt-editor-phase.mjs  verify-release-version.mjs  verify-remote-runtime-removal.mjs  verify-rescue-mode.mjs  verify-responsive-layout-contract.mjs  verify-secret-redaction.mjs  verify-store-snapshot-phase.mjs  verify-tagger-sidecar-phase.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer-hooks.nsh
src-tauri/plugins/nais-android-transfer/: .gitignore  Cargo.toml  build.rs
src-tauri/plugins/nais-android-transfer/android/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
src-tauri/plugins/nais-android-transfer/android/src/debug/: AndroidManifest.xml
src-tauri/plugins/nais-android-transfer/android/src/debug/java/com/bluhair/naisblue/transfer/: Phase12QaReceiver.kt
src-tauri/plugins/nais-android-transfer/android/src/main/: AndroidManifest.xml
src-tauri/plugins/nais-android-transfer/android/src/main/java/com/bluhair/naisblue/transfer/: AndroidTransferPlugin.kt  CloudflareCredentialStore.kt  CloudflareTransferExecutor.kt  NaisTransferJobService.kt  NaisTransferWorker.kt  TransferActionReceiver.kt  TransferExecution.kt  TransferNotifications.kt  TransferScheduler.kt  TransferTicket.kt  TransferTicketStore.kt  TransferTicketValidator.kt
src-tauri/plugins/nais-android-transfer/android/src/main/java/com/sunakgo/nais2/transfer/: AndroidTransferPlugin.kt  NaisTransferJobService.kt  NaisTransferWorker.kt  TransferActionReceiver.kt  TransferExecution.kt  TransferNotifications.kt  TransferScheduler.kt  TransferTicket.kt  TransferTicketStore.kt  TransferTicketValidator.kt
src-tauri/plugins/nais-android-transfer/permissions/: default.toml
src-tauri/plugins/nais-android-transfer/permissions/autogenerated/: reference.md
src-tauri/plugins/nais-android-transfer/permissions/autogenerated/commands/: checkpoint.toml  configure_cloudflare.toml  recover.toml  retry.toml
src-tauri/plugins/nais-android-transfer/permissions/schemas/: schema.json
src-tauri/plugins/nais-android-transfer/src/: commands.rs  error.rs  lib.rs  types.rs
src-tauri/python/: asset_plan_preview.py  asset_postprocess.py  build_sidecar.bat  build_sidecar_macos.sh  danbooru_tags.py  r2_deploy.py  tagger_server.py  tagger_server.spec
src-tauri/src/: lib.rs  nai_transport.rs  r2_native.rs  sync_transport.rs
src/hooks/: useCompositionStudioSession.ts  useDurableQueueRuntime.ts  useR2UploadRuntime.ts  useSceneGeneration.ts  useShortcuts.ts  useUpdateChecker.tsx  useWindowResizePerformanceMode.ts
src/lib/: app-relaunch.ts  auto-backup.ts  backup-projection.ts  binary-digest.ts  character-rotation-runtime.ts  character-rotation.ts  composition-authority.ts  composition-migration-materialization.ts  composition-migration-runtime.ts  composition-migration-shadow.ts  composition-migration-startup.ts  fragment-processor.ts  generation-metadata.ts  image-metadata-purge.ts  image-utils.ts  indexed-db.ts  metadata-parser.ts  nais2-png-meta.ts  scene-output-path.ts  startup-mode.ts  store-snapshots.ts
src/pages/: AssetModuleStudio.tsx  Library.tsx  MainMode.tsx  Marketplace.tsx  Organizer.tsx  PromptEditor.tsx  QueueCenter.tsx  R2Upload.tsx  SceneDetail.tsx  SceneMode.tsx  Settings.tsx  StyleLab.tsx  ToolsMode.tsx  Trash.tsx  WebView.tsx
src/platform/: browser.ts  capabilities.ts  portable-resources.ts  runtime.ts  storage.ts  tauri-portable-resource-reader.ts
src/services/: asset-plan-preview-service.ts  asset-postprocess-service.ts  asset-profile-file.ts  composition-authoring-adapter.ts  composition-authoring-runtime.ts  composition-authoring-session.ts  composition-studio-preview.ts  danbooru-tag-verifier.ts  local-tagger-server.ts  novelai-api.ts  novelai-types.ts  r2-deploy-service.ts  style-lab-generation.ts
src/stores/: artifact-lifecycle-store.ts  asset-module-store.ts  auth-store.ts  character-prompt-store.ts  character-rotation-store.ts  character-store.ts  diagnostics-store.ts  fragment-store.ts  generation-draft-store.ts  generation-session-store.ts  generation-store.ts  layout-store.ts  library-store.ts  market-auth-store.ts  preset-store.ts  queue-store.ts  scene-store.ts  settings-store.ts  (+2 more)
tests/: setup-composition-authority.ts
(+490 files in other folders)
