[package]
name = "nais2"
version = "2.8.1"
description = "NovelAI Image Studio"
authors = ["sunakgo"]
license = "GPL-3.0"
repository = "https://github.com/JaCha00/nais2-integration-complete"
edition = "2021"
rust-version = "1.88.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["protocol-asset", "unstable"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "=2.5.9"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2.5.2"
tauri-plugin-process = "2"
tauri-plugin-stronghold = "=2.3.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
zip = "2.2"
base64 = "0.22"

# These crates back the desktop-only gates in src/lib.rs. Keeping updater here
# also prevents its reqwest rustls-no-provider feature from leaking into Android.
[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

# Recommended by the official Stronghold plugin setup to keep the password KDF
# usable in development builds without changing release cryptography.
[profile.dev.package.scrypt]
opt-level = 3

[patch.crates-io]
# Tauri 2.11 still pulls plist 1.9.0, whose published crate depends on
# vulnerable quick-xml 0.39.x. The local plist copy is source-identical except
# for the quick-xml 0.41.x floor documented in vendor/plist/NAIS_PATCH.md.
plist = { path = "vendor/plist" }
