[package]
name = "tauri-plugin-nais-android-transfer"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
links = "tauri-plugin-nais-android-transfer"
license = "MIT"
description = "Secret-free Android scheduling boundary for NAIS Phase 12 transfers"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = "2.11.5"
thiserror = "2"

[build-dependencies]
# Tauri's build helper links this tracked Android library into generated projects.
tauri-plugin = { version = "2.6.3", features = ["build"] }
